--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,10 @@
     </aside>
   </div>
 <% else %>
-  <div class="center jumbotron">
+  <div class="col-md-4">
+    
+  </div>
+  <div class="col-md-8">
     <h1>Welcome to the Procore Sales Engineering Portal</h1>
 
     <h2>
