--- a/app/views/user_mailer/account.activation.html.erb
+++ b/app/views/user_mailer/account.activation.html.erb
@@ -1,4 +1,4 @@
-Hi <%= @user.name %>,
+Hi <%= @user.profile_name %>,
 
 Welcome to the Sample App! Click on the link below to activate your account:
 
