--- a/app/views/user_mailer/account.activation.html.erb
+++ b/app/views/user_mailer/account.activation.html.erb
@@ -1,5 +1,10 @@
-Hi <%= @user.profile_name %>,
+<h1>Sample App</h1>
 
+<p>Hi <%= @user.profile_name %>,</p>
+
+<p>
 Welcome to the Sample App! Click on the link below to activate your account:
+</p>
 
-<%= edit_account_activation_url(@user.activation_token, email: @user.email) %>
+<%= link_to "Activate", edit_account_activation_url(@user.activation_token,
+                                                    email: @user.email) %>
