--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,20 @@
-<% if logged_in? %>
-  <header class="navbar navbar-fixed-top navbar-inverse">
-    <div class="container">
-      <%= link_to "Sales Engineering", root_path, id: "logo" %>
+<header class="navbar navbar-fixed-top navbar-inverse">
+  <div class="container">
+    <% if logged_in? %>
+      <%= link_to "Sales Engineering", root_path, id: "logo", class: "navbar-brand" %>
       <nav>
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to "Home",     root_path %></li>
           <li><%= link_to "Help",     help_path %></li>
         </ul>
       </nav>
-    </div>
-  </header>
-<% end %>
+    <% else %>
+      <nav>
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to "Sign up", signup_path %></li>
+          <li><%= link_to "Log in", login_path %></li>
+        </ul>
+      </nav>
+    <% end %>
+  </div>
+</header>
