--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,19 +8,18 @@
   </div>
 <% else %>
   <div class="col-md-4">
-
+    <div class="well">
+      <%= render "shared/new_session_form" %>
+    </div>
   </div>
   <div class="col-md-8">
     <h1>Welcome to the Procore Sales Engineering Portal</h1>
 
     <h2>
-      This is a home page for the
-      <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-      sample application.
+      This is the home page for the Sales Engineering Team at <a href="https://procoretech.com" target="_blank">Procore Technologies</a>.
     </h2>
 
     <%= link_to "sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
   </div>
 
-  <%= link_to image_tag("rails.png", alt: "Rails logo"), 'http://rubyonrails.org/' %>
 <% end %>
