Added some before filters to the users and integrations controllers

--- a/app/views/integrations/_form.html.erb
+++ b/app/views/integrations/_form.html.erb
@@ -1,22 +1,38 @@
 <%= form_for @integration do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
 
-  <%= f.label :name %>
-  <%= f.text_field :name, class: 'form-control' %>
+  <div class="form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name, class: 'form-control' %>
+  </div>
 
-  <%= f.collection_select :integration_type_id, IntegrationType.all, :id, :name %>
+  <div class="form-group">
+    <%= f.label :integrations_type, "Integration Type" %>
+    <%= f.collection_select :integration_type_id, IntegrationType.all, :id, :name, {}, {:class=>'form-control'} %>
+  </div>
 
-  <%= f.label :description %>
-  <%= f.text_area :description, class: 'form-control' %>
+  <div class="form-group">
+    <%= f.label :description %>
+    <%= f.text_area :description, class: 'form-control' %>
+  </div>
 
-  <%= f.label :built_by %>
-  <%= f.text_field :built_by, class: 'form-control' %>
+  <div class="form-group">
+    <%= f.label :built_by %>
+    <%= f.text_field :built_by, class: 'form-control' %>
+  </div>
 
-  <%= f.label :status %>
-  <%= f.text_field :status, class: 'form-control' %>
+  <div class="form-group">
+    <%= f.label :status %>
+    <%= f.text_field :status, class: 'form-control' %>
+  </div>
 
-  <%= f.label :summary %>
-  <%= f.text_area :summary, class: 'form-control' %>
+  <div class="form-group">
+    <%= f.label :summary %>
+    <%= f.text_area :summary, class: 'form-control' %>
+  </div>
 
-  <%= f.submit yield(:button_text), class: "btn btn-primary" %>
+  <div class="form-group">
+    <%= f.submit yield(:button_text), class: "btn btn-primary" %>
+  </div>
+
 <% end %>
