--- a/app/views/integrations/new.html.erb
+++ b/app/views/integrations/new.html.erb
@@ -1,4 +1,8 @@
 <% provide(:button_text, 'Create Integration') %>
 <h1>Create New Integration</h1>
 
-<%= render "form" %>
+<div class="row">
+  <div class="col-md-4">
+    <%= render "form" %>
+  </div>
+</div>
