--- a/app/views/integrations/show.html.erb
+++ b/app/views/integrations/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @integration.name %></h1>
+<h1><%= @integration.name %> <span><%= link_to "Edit", edit_integration_path(@integration), class: "btn btn-default" %></span></h1>
 <h3><%= @integration.integration_type.name %></h3>
 <p><%= @integration.built_by %></p>
 <h5>Description:</h5>
@@ -6,3 +6,7 @@
 <p>Status: <%= @integration.status %></p>
 <h5>Summary:</h5>
 <p><%= @integration.summary %></p>
+
+<% if current_user.admin? && !current_user?(@user) %>
+  <%= link_to "Delete", @integration, method: :delete, data: { confirm: "Do you really want to delete this integration?" } %>
+<% end %>
