--- a/app/views/integration_types/index.html.erb
+++ b/app/views/integration_types/index.html.erb
@@ -1,9 +1,32 @@
-<h1>Integration Types</h1>
-
-<% @integration_types.each do |it| %>
-  <ul>
-    <li><%= it.name %></li>
-  </ul>
-<% end %>
-
-<%= link_to "Add New Integration Type", new_integration_type_path, class: "btn btn-danger" %>
+<div class="row">
+  <div class="col-md-8">
+    <table class="table table-bordered table-hover">
+      <thead>
+        <tr>
+          <th>Integraion Types</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @integration_types.each do |it| %>
+        <tr>
+          <td><%= it.name %></td>
+          <td>
+            <%= link_to(@integration_type, {:class => "btn btn-danger btn-xs"}, method: :delete, data: { confirm: "Do you want to delete this integration type?" }) do %>
+              <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+            <% end %>
+          </td>
+        </tr>
+        <% end %>
+        <tr>
+          <td>Add New Integration Type</td>
+          <td>
+            <%= link_to(new_integration_type_path, {:class => "btn btn-default btn-xs"}) do %>
+              <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+            <% end %>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
