--- a/app/views/integrations/_form.html.erb
+++ b/app/views/integrations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @integration do |f| %>
+<%= form_for(@integration, html: { multipart: true }) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
 
   <div class="form-group">
@@ -32,7 +32,20 @@
   </div>
 
   <div class="form-group">
+    <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png' %>
+  </div>
+
+  <div class="form-group">
     <%= f.submit yield(:button_text), class: "btn btn-primary" %>
   </div>
 
 <% end %>
+
+<script type="text/javascript">
+  $('#micropost_picture').bind('change', function() {
+    var size_in_megabytes = this.files[0].size/1024/1024;
+    if (size_in_megabytes > 5) {
+      alert('Maximum file size is 5MB. Please choose a smaller file.');
+    }
+  });
+</script>
