Added uniqueness validation to integration types

--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -1,6 +1,6 @@
-<h1>Sample App</h1>
+<h1>Welcome to the Procore Sales Engineering App</h1>
 
-<p>Hi <%= @user.profile_name %>,</p>
+<p>Hi <%= @user.first_name %> <%= @user.last_name %></p>
 
 <p>
 Welcome to the Sample App! Click on the link below to activate your account:
