Fixed the login activation redirect

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,7 @@
-<% if current_user && logged_in? %>
-  <div class="row">
-    <aside class="col-md-4">
-      <section class="user_info">
-        <%= render 'shared/user_info' %>
-      </section>
-    </aside>
-  </div>
+<% if logged_in? %>
+  <%= render current_user %>
 <% else %>
+
   <div class="col-md-4">
     <div class="well">
       <%= render "shared/new_session_form" %>
@@ -21,5 +16,4 @@
 
     <%= link_to "sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
   </div>
-
 <% end %>
