--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,6 @@
 <% if logged_in? %>
-  <%= render current_user %>
+  <%= render 'shared/user_info' %>
 <% else %>
-
   <div class="col-md-4">
     <div class="well">
       <%= render "shared/new_session_form" %>
