--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,7 +2,7 @@
 <% provide(:button_text, 'Save changes') %>
 <h1>Update your profile</h1>
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col-md-6">
     <%= render 'form' %>
     <div class="gravatar_edit">
       <%= gravatar_for @user %>
