Moved user#new view form to have no offset

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
 <% provide(:button_text, 'Create my account') %>
 <h1>Sign up</h1>
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col-md-6">
     <%= render 'form' %>
   </div>
 </div>
