--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,6 @@
-@import "bootstrap-sprockets";
-@import "bootstrap";
-@import 'bootstrap/theme';
+// @import "bootstrap-sprockets";
+// @import "bootstrap";
+// @import 'bootstrap/theme';
 
 body {
   padding-top: 70px;
