--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,4 +8,12 @@
       </h1>
     </section>
   </aside>
+  <div class="col-md-8">
+    <% if @user.integrations.any? %>
+      <h3>Integrations (<%= @user.integrations.count %>)</h3>
+      <ol>
+        <%= render @integrations %>
+      </ol>
+    <% end %>
+  </div>
 </div>
