--- a/app/assets/stylesheets/integrations.scss
+++ b/app/assets/stylesheets/integrations.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the Integrations controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.app-single {
+  align-items: center;
+  align-self: flex-start;
+}
