--- a/app/views/integrations/_form.html.erb
+++ b/app/views/integrations/_form.html.erb
@@ -7,7 +7,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :integrations_type, "Integration Type" %>
+    <%= f.label :integration_type, "Integration Type" %>
     <%= f.collection_select :integration_type_id, IntegrationType.all, :id, :name, {}, {:class=>'form-control'} %>
   </div>
 
