--- a/app/views/learning_resources/_form.html.erb
+++ b/app/views/learning_resources/_form.html.erb
@@ -8,7 +8,7 @@
 
   <div class="form-group">
     <%= f.label :link %>
-    <%= f.text_field :link, class: 'form-control' %>
+    <%= f.url_field :link, class: 'form-control' %>
   </div>
 
   <div class="form-group">
