Added consistent header styling for page headers

--- a/app/views/integrations/new.html.erb
+++ b/app/views/integrations/new.html.erb
@@ -1,4 +1,4 @@
 <% provide(:button_text, 'Create Integration') %>
-<h1>Create New Integration</h1>
+<h1 class="page-header">Create New Integration</h1>
 
 <%= render "form" %>
