--- a/app/views/learning_resources/index.html.erb
+++ b/app/views/learning_resources/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Learning Resources</h1>
+<h1 class="page-header">Learning Resources</h1>
 <%= link_to "New Learning Resource", new_learning_resource_path, class: "btn btn-primary" %>
 <% @learning_resources.each do |lr| %>
 
