--- a/app/views/integrations/edit.html.erb
+++ b/app/views/integrations/edit.html.erb
@@ -1,4 +1,4 @@
 <% provide(:button_text, 'Update') %>
-<h1>Edit Integration Information</h1>
+<h1 class="page-header">Edit Integration Information</h1>
 
 <%= render 'form' %>
