--- a/app/views/integrations/show.html.erb
+++ b/app/views/integrations/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @integration.name %> <span><%= link_to "Edit", edit_integration_path(@integration), class: "btn btn-default" %></span></h1>
+<h1 class="page-header"><%= @integration.name %> <span><%= link_to "Edit", edit_integration_path(@integration), class: "btn btn-default" %></span></h1>
 <%= image_tag @integration.picture %>
 <h3><%= @integration.integration_type.name %></h3>
 <p>Built by: <%= @integration.built_by %></p>
