--- a/app/views/learning_resources/edit.html.erb
+++ b/app/views/learning_resources/edit.html.erb
@@ -1,3 +1,3 @@
 <% provide(:button_text, 'Create') %>
-<h1>Edit Learning Resource</h1>
+<h1 class="page-header">Edit Learning Resource</h1>
 <%= render 'form' %>
