--- a/app/views/learning_resources/new.html.erb
+++ b/app/views/learning_resources/new.html.erb
@@ -1,3 +1,3 @@
 <% provide(:button_text, 'Create') %>
-<h1>Create New Learning Resource</h1>
+<h1 class="page-header">Create New Learning Resource</h1>
 <%= render 'form' %>
