--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Edit user') %>
 <% provide(:button_text, 'Save changes') %>
-<h1>Update your profile</h1>
+<h1 class="page-header">Update your profile</h1>
 <div class="row">
   <div class="col-md-6">
     <%= render 'form' %>
