--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,6 +5,7 @@
       <nav>
         <ul>
           <li><%= link_to "About", "#" %></li>
+          <li><%= link_to "Help",         help_path %></li>
           <li><%= link_to "Contact", "#" %></li>
         </ul>
       </nav>
