--- a/app/views/learning_resources/show.html.erb
+++ b/app/views/learning_resources/show.html.erb
@@ -1,1 +1,14 @@
-<h1 class="page-header"><%= @learning_resource.title %></h1>
+<div class="page-header">
+  <h1><a href="<%= @learning_resource.link %>"><%= @learning_resource.title %></a><br> <small>Submitted by <%= @learning_resource.user.profile_name %></small></h1>
+</div>
+
+<div class="btn-group">
+  <%= link_to "Visit URL", @learning_resource.link, class: "btn btn-primary" %>
+</div>
+
+<% if @learning_resource.user == current_user %>
+  <div class="btn-group">
+    <%= link_to "Edit", edit_learning_resource_path(@learning_resource), class: "btn btn-default" %>
+    <%= link_to "Destroy", @learning_resource, method: :delete, data: { confirm: "Are you sure you want to delete this link?" }, class: "btn btn-default" %>
+  </div>
+<% end %>
