--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,3 +1,7 @@
-<%= link_to gravatar_for(current_user, size: 50), current_user %>
+<div class="user_home_image">
+  <%= link_to current_user do %>
+    <%= image_tag current_user.picture %>
+  <% end %>
+</div>
 <h1><%= current_user.profile_name %></h1>
 <span><%= link_to "view my profile", current_user %></span>
