--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.user_info {
+  img {
+    width: 200px;
+  }
+}
+
+.user_integrations {
+  ol {
+    li {
+      margin-bottom: 10px;
+    }
+    img {
+      width: 50px;
+    }
+  }
+}
