--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,12 +1,8 @@
 <% provide(:title, 'Edit user') %>
 <% provide(:button_text, 'Save changes') %>
-<h1 class="page-header">Update your profile</h1>
+<h1 class="page-header">Update Your Profile</h1>
 <div class="row">
   <div class="col-md-6">
     <%= render 'form' %>
-    <div class="gravatar_edit">
-      <%= gravatar_for @user %>
-      <a href="http://gravatar.com/emails" target="_blank">Change</a>
-    </div>
   </div>
 </div>
