Added acts as votable gem and styled index and show pages for learning resources

--- a/app/views/learning_resources/index.html.erb
+++ b/app/views/learning_resources/index.html.erb
@@ -7,5 +7,19 @@
       <%= link_to lr.title, lr %><br>
       <small class="author">Submitted <%= time_ago_in_words(lr.created_at) %> by <%= lr.user.profile_name %></small>
     </h3>
+
+    <div class="btn-group">
+      <a href="<%= lr.link %>" class="btn btn-default btn-sm">Visit Link</a>
+      <%= link_to like_learning_resource_path(lr), method: :put, class: "btn btn-default btn-sm" do %>
+        <span class="glyphicon glyphicon-chevron-up"></span>
+        Upvote
+        <%= lr.get_upvotes.size %>
+      <% end %>
+      <%= link_to dislike_learning_resource_path(lr), method: :put, class: "btn btn-default btn-sm" do %>
+        <span class="glyphicon glyphicon-chevron-down"></span>
+        Downvote
+        <%= lr.get_downvotes.size %>
+      <% end %>
+    </div>
   </div>
 <% end %>
