--- a/app/views/learning_resources/show.html.erb
+++ b/app/views/learning_resources/show.html.erb
@@ -12,3 +12,16 @@
     <%= link_to "Destroy", @learning_resource, method: :delete, data: { confirm: "Are you sure you want to delete this link?" }, class: "btn btn-default" %>
   </div>
 <% end %>
+
+<div class="btn-group pull-right">
+  <%= link_to like_learning_resource_path(@learning_resource), method: :put, class: "btn btn-default btn-sm" do %>
+    <span class="glyphicon glyphicon-chevron-up"></span>
+    Upvote
+    <%= @learning_resource.get_upvotes.size %>
+  <% end %>
+  <%= link_to dislike_learning_resource_path(@learning_resource), method: :put, class: "btn btn-default btn-sm" do %>
+    <span class="glyphicon glyphicon-chevron-down"></span>
+    Downvote
+    <%= @learning_resource.get_downvotes.size %>
+  <% end %>
+</div>
