--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -42,6 +42,11 @@
         <%= f.submit yield(:button_text), class: "btn btn-primary" %>
       </div>
     </div>
+
+    <div class="panel-footer">
+      <h3>Cancel my account</h3>
+      <p>Unhappy? <%= button_to "Cancel my account", user_path(@user), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-default" %></p>
+    </div>
   </div>
 
 <% end %>
