added style to blog index and show need to fix edit routing for blog

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,6 +9,7 @@
           <li><%= link_to "Home",         root_path %></li>
           <li><%= link_to "Integrations", integrations_path %></li>
           <li><%= link_to "Learning Resources", learning_resources_path %></li>
+          <li><%= link_to "Blog", posts_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
             <ul class="dropdown-menu">
