--- a/app/views/learning_resources/edit.html.erb
+++ b/app/views/learning_resources/edit.html.erb
@@ -1,3 +1,3 @@
-<% provide(:button_text, 'Create') %>
+<% provide(:button_text, 'Edit') %>
 <h1 class="page-header">Edit Learning Resource</h1>
 <%= render 'form' %>
