--- a/app/views/learning_resources/show.html.erb
+++ b/app/views/learning_resources/show.html.erb
@@ -1,42 +1,53 @@
+<!-- HEADER -->
 <div class="page-header">
   <h1><a href="<%= @learning_resource.link %>"><%= @learning_resource.title %></a><br> <small>Submitted by <%= @learning_resource.user.profile_name %></small></h1>
 </div>
 
-<div class="btn-group">
-  <%= link_to "Visit URL", @learning_resource.link, class: "btn btn-primary" %>
-</div>
-
-<% if @learning_resource.user == current_user %>
+<!-- RESOURCE BUTTON AREA -->
+<div class="learning_resource">
   <div class="btn-group">
-    <%= link_to "Edit", edit_learning_resource_path(@learning_resource), class: "btn btn-default" %>
-    <%= link_to "Destroy", @learning_resource, method: :delete, data: { confirm: "Are you sure you want to delete this link?" }, class: "btn btn-default" %>
+    <%= link_to "Visit URL", @learning_resource.link, class: "btn btn-primary" %>
   </div>
-<% end %>
 
-<div class="btn-group pull-right">
-  <%= link_to like_learning_resource_path(@learning_resource), method: :put, class: "btn btn-default btn-sm" do %>
-    <span class="glyphicon glyphicon-chevron-up"></span>
-    Upvote
-    <%= @learning_resource.get_upvotes.size %>
+  <% if @learning_resource.user == current_user %>
+    <div class="btn-group">
+      <%= link_to "Edit", edit_learning_resource_path(@learning_resource), class: "btn btn-default" %>
+      <%= link_to "Destroy", @learning_resource, method: :delete, data: { confirm: "Are you sure you want to delete this link?" }, class: "btn btn-default" %>
+    </div>
   <% end %>
-  <%= link_to dislike_learning_resource_path(@learning_resource), method: :put, class: "btn btn-default btn-sm" do %>
-    <span class="glyphicon glyphicon-chevron-down"></span>
-    Downvote
-    <%= @learning_resource.get_downvotes.size %>
-  <% end %>
+
+  <div class="btn-group pull-right">
+    <%= link_to like_learning_resource_path(@learning_resource), method: :put, class: "btn btn-default btn-sm" do %>
+      <span class="glyphicon glyphicon-chevron-up"></span>
+      Upvote
+      <%= @learning_resource.get_upvotes.size %>
+    <% end %>
+    <%= link_to dislike_learning_resource_path(@learning_resource), method: :put, class: "btn btn-default btn-sm" do %>
+      <span class="glyphicon glyphicon-chevron-down"></span>
+      Downvote
+      <%= @learning_resource.get_downvotes.size %>
+    <% end %>
+  </div>
 </div>
 
-<h4 class="comments_title">
-  <%= @learning_resource.learning_resource_comments.count %> Comments
-</h4>
 
-<div class="comments">
-  <%= render :partial => @learning_resource.learning_resource_comments %>
-</div>
-<%= simple_form_for [@learning_resource, LearningResourceComment.new] do |f| %>
-  <div class="field">
-    <%= f.text_area :body, class: "form-control" %>
+<!-- COMMENTS AREA -->
+<div class="learning_resource_comments">
+  <h4 class="comments_title">
+    <%= @learning_resource.learning_resource_comments.count %> Comments
+  </h4>
+
+  <div class="comments">
+    <%= render :partial => @learning_resource.learning_resource_comments %>
   </div>
-  <br>
-  <%= f.submit "Add Comment", class: "btn btn-primary" %>
-<% end %>
+
+  <div class="learning_resource_comment_form">
+    <%= simple_form_for [@learning_resource, LearningResourceComment.new] do |f| %>
+      <div class="field">
+        <%= f.text_area :body, class: "form-control" %>
+      </div>
+      <br>
+      <%= f.submit "Add Comment", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
