--- a/app/views/learning_resources/index.html.erb
+++ b/app/views/learning_resources/index.html.erb
@@ -1,25 +1,27 @@
 <h1 class="page-header">Learning Resources</h1>
 <%= link_to "New Learning Resource", new_learning_resource_path, class: "btn btn-primary" %>
 
-<% @learning_resources.each do |lr| %>
-  <div class="resource row clearfix">
-    <h3>
-      <%= link_to lr.title, lr %><br>
-      <small class="author">Submitted <%= time_ago_in_words(lr.created_at) %> by <%= lr.user.profile_name %></small>
-    </h3>
+<div class="learning_resources">
+  <% @learning_resources.each do |lr| %>
+    <div class="resource row clearfix">
+      <h3>
+        <%= link_to lr.title, lr %><br>
+        <small class="author">Submitted <%= time_ago_in_words(lr.created_at) %> by <%= lr.user.profile_name %></small>
+      </h3>
 
-    <div class="btn-group">
-      <a href="<%= lr.link %>" class="btn btn-default btn-sm">Visit Link</a>
-      <%= link_to like_learning_resource_path(lr), method: :put, class: "btn btn-default btn-sm" do %>
-        <span class="glyphicon glyphicon-chevron-up"></span>
-        Upvote
-        <%= lr.get_upvotes.size %>
-      <% end %>
-      <%= link_to dislike_learning_resource_path(lr), method: :put, class: "btn btn-default btn-sm" do %>
-        <span class="glyphicon glyphicon-chevron-down"></span>
-        Downvote
-        <%= lr.get_downvotes.size %>
-      <% end %>
+      <div class="btn-group">
+        <a href="<%= lr.link %>" target="_blank" class="btn btn-default btn-sm">Visit Link</a>
+        <%= link_to like_learning_resource_path(lr), method: :put, class: "btn btn-default btn-sm" do %>
+          <span class="glyphicon glyphicon-chevron-up"></span>
+          Upvote
+          <%= lr.get_upvotes.size %>
+        <% end %>
+        <%= link_to dislike_learning_resource_path(lr), method: :put, class: "btn btn-default btn-sm" do %>
+          <span class="glyphicon glyphicon-chevron-down"></span>
+          Downvote
+          <%= lr.get_downvotes.size %>
+        <% end %>
+      </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
+</div>
