--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-12">
-    <footer class="footer">
+    <footer id="footer">
       <small>Procore Sales Engineering &copy; <%= Time.now.year %></small>
       <nav>
         <ul>
