--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @post, url: {action: "create"} do |f| %>
+<%= form_for(post) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
 
   <div class="form-group">
