--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -8,8 +8,18 @@
 
   <div class="form-group">
     <%= f.label :body %><br>
-    <%= f.text_area :body, class: 'form-control'  %>
+    <%= f.text_area :body, class: 'form-control wysihtml5', id: "some-textarea", placeholder: "Enter text ..." %>
   </div>
+
+  <script type="text/javascript">
+    $(document).ready(function(){
+
+      $('.wysihtml5').each(function(i, elem) {
+        $(elem).wysihtml5();
+      });
+
+    })
+  </script>
 
   <div class="form-group">
     <%= f.submit yield(:button_text), class: "btn btn-primary" %>
