--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
   <%= link_to "Edit", edit_post_path(@post), class: "btn btn-default btn-sm" %>
 </div>
 <div class="blog_body">
-  <p><%= @post.body %></p>
+  <p><%= simple_format(@post.body) %></p>
 </div>
 
 <%= link_to '< Back', posts_path %>
