--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,9 +23,30 @@
   padding: 5px;
 }
 
+.container {
+  width: 1400px;
+}
+
 .checkbox input[type="checkbox"] {
   position: static;
   margin-left: 0;
+}
+
+.main_sidebar {
+  div {
+    ul {
+      li {
+        background-color: #337ab7;
+        border-color: #2e6da4;
+        width: 100%;
+        text-align: center;
+
+        a {
+          color: white;
+        }
+      }
+    }
+  }
 }
 
 #footer {
