--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,16 @@
       <% flash.each do |message_type, message| %>
         <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
       <% end %>
-      <%= yield %>
+      <div class="row">
+        <div class="col-md-10">
+          <%= yield %>
+        </div>
+        <div class="col-md-2">
+          <div class="main_sidebar">
+            <%= render 'layouts/sidebar' %>
+          </div>
+        </div>
+      </div>
       <%= render 'layouts/footer' %>
       <!-- <%= debug(params) if Rails.env.development? %> -->
     </div>
