cleaned up sidebar for edit index and whow learning resources

--- a/app/views/learning_resources/index.html.erb
+++ b/app/views/learning_resources/index.html.erb
@@ -28,7 +28,7 @@
 
 <!-- SIDEBAR CONTENT -->
 <% content_for :sidebar do %>
-  <ul class="nav nav-pills">
+  <ul class="nav nav-pills nav-stacked">
     <li><%= link_to "New Learning Resource", new_learning_resource_path %></li>
   </ul>
 <% end %>
