--- a/app/views/learning_resources/show.html.erb
+++ b/app/views/learning_resources/show.html.erb
@@ -20,8 +20,7 @@
       </div>
       <% if @learning_resource.user == current_user %>
         <div class="btn-group">
-          <%= link_to "Edit", edit_learning_resource_path(@learning_resource), class: "btn btn-default" %>
-          <%= link_to "Destroy", @learning_resource, method: :delete, data: { confirm: "Are you sure you want to delete this link?" }, class: "btn btn-default" %>
+
         </div>
       <% end %>
     </div>
@@ -64,3 +63,12 @@
     <% end %>
   </div>
 </div>
+
+
+<!-- SIDEBAR CONTENT -->
+<% content_for :sidebar do %>
+  <ul class="nav nav-pills nav-stacked">
+    <li role="presentation"><%= link_to "Edit", edit_learning_resource_path(@learning_resource) %></li>
+    <li role="presentation"><%= link_to "Destroy", @learning_resource, method: :delete, data: { confirm: "Are you sure you want to delete this link?" } %></li>
+  </ul>
+<% end %>
