--- a/app/views/learning_resources/show.html.erb
+++ b/app/views/learning_resources/show.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, @learning_resource.title) %>
 <!-- HEADER -->
 <div class="page-header">
   <h1><a href="<%= @learning_resource.link %>" target="_blank"><%= @learning_resource.title %></a><br> <small>Submitted by <%= @learning_resource.user.profile_name %></small></h1>
