--- a/app/views/learning_resources/new.html.erb
+++ b/app/views/learning_resources/new.html.erb
@@ -1,3 +1,4 @@
 <% provide(:button_text, 'Create') %>
+<% provide(:title, "Create New Laerning Resource") %>
 <h1 class="page-header">Create New Learning Resource</h1>
 <%= render 'form' %>
