Added title attribute for integrations pages

--- a/app/views/learning_resources/edit.html.erb
+++ b/app/views/learning_resources/edit.html.erb
@@ -1,4 +1,4 @@
-<% provide(:button_text, 'Edit') %>
+<% provide(:button_text, 'Update') %>
 <% provide(:title, @learning_resource.title) %>
 <h1 class="page-header">Edit Learning Resource</h1>
 <%= render 'form' %>
