--- a/app/views/integrations/edit.html.erb
+++ b/app/views/integrations/edit.html.erb
@@ -1,4 +1,5 @@
 <% provide(:button_text, 'Update') %>
+<% provide(:title, @integration.name) %>
 <h1 class="page-header">Edit Integration Information</h1>
 
 <%= render 'form' %>
