--- a/app/views/integrations/new.html.erb
+++ b/app/views/integrations/new.html.erb
@@ -1,4 +1,5 @@
 <% provide(:button_text, 'Create Integration') %>
+<% provide(:title, "Create New Integration") %>
 <h1 class="page-header">Create New Integration</h1>
 
 <%= render "form" %>
