--- a/app/views/integrations/show.html.erb
+++ b/app/views/integrations/show.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, @integration.name) %>
 <h1 class="page-header"><%= @integration.name %> <span><%= link_to "Edit", edit_integration_path(@integration), class: "btn btn-default" %></span></h1>
 <%= image_tag @integration.picture %>
 <h3><%= @integration.integration_type.name %></h3>
