--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,4 @@
 <% provide(:button_text, 'Create Post') %>
+<% provide(:title, "New Post") %>
 <h1 class="page-header">New Post</h1>
 <%= render 'form', post: @post %>
