--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,3 +1,3 @@
-<% provide(:button_text, 'Edit Post') %>
+<% provide(:button_text, 'Update') %>
 <h1 class="page-header">Edit <%= @post.title %> Article</h1>
 <%= render 'form', post: @post %>
