--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -43,6 +43,10 @@
 
         a {
           color: white;
+
+          &:hover {
+            background-color: #337aff;
+          }
         }
       }
     }
