Added conditional code for sign up page when user doesn't exist

--- a/app/views/learning_resources/index.html.erb
+++ b/app/views/learning_resources/index.html.erb
@@ -1,4 +1,6 @@
 <% provide(:title, "Learning Resources") %>
+
+<!-- MAIN PAGE CONTENT -->
 <h1 class="page-header">Learning Resources</h1>
 
 <div class="learning_resources">
