--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -43,10 +43,12 @@
       </div>
     </div>
 
-    <div class="panel-footer">
-      <h3>Cancel my account</h3>
-      <p>Unhappy? <%= button_to "Cancel my account", user_path(@user), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-default" %></p>
-    </div>
+    <% if current_user && logged_in? %>
+      <div class="panel-footer">
+        <h3>Cancel my account</h3>
+        <p>Unhappy? <%= button_to "Cancel my account", user_path(@user), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-default" %></p>
+      </div>
+    <% end %>
   </div>
 
 <% end %>
