Added learning resource type setting to add or remove the types also added ajax functionality for this

--- a/app/views/learning_resources/index.html.erb
+++ b/app/views/learning_resources/index.html.erb
@@ -34,4 +34,5 @@
   <ul class="nav nav-pills nav-stacked">
     <li><%= link_to "New Learning Resource", new_learning_resource_path %></li>
   </ul>
+  <h6><%= link_to "Learning Resource Settings", learning_resource_types_path %></h6>
 <% end %>
