Cleaned up table in learning resources to ready for sorting and search functionality

--- a/app/views/learning_resources/index.html.erb
+++ b/app/views/learning_resources/index.html.erb
@@ -4,7 +4,7 @@
 <h1 class="page-header">Learning Resources</h1>
 
 <div class="learning_resources">
-  <table class="table table-condensed">
+  <table class="table table-condensed table-bordered table-hover">
     <thead>
       <tr>
         <th>Title</th>
